# swaybarpp

./: README.md  meson.build  release.txt  submodules.txt
files/: config.json  lock.json
src/: brightness_slider.cpp  cairo-util.cpp  cairo-util.hpp  cairo_util.cpp  color-json.hpp  color_json.hpp  json  lock.cpp  lock_passwd_main.cpp  main.cpp  mod.cpp  mod.hpp  serde  shm-buffer.cpp  shm-buffer.hpp  shm_buffer.cpp  shm_buffer.hpp  sway_ipc.cpp  sway_ipc.hpp  towl  volume.cpp  volume.hpp  volume_slider.cpp  window.cpp  window.hpp
src/bar/: main.cpp  mod.hpp  sway-ipc.cpp  sway-ipc.hpp  window.cpp  window.hpp
src/bar/mods/: battery.cpp  cpu-usage.cpp  file.cpp  loadavg.cpp  network.cpp  pipewire.cpp  ram-usage.cpp  temp.cpp  workspace.cpp
src/lock/: lock_window.cpp  lock_window.hpp  main.cpp  passwd-file.cpp  passwd.cpp  passwd.hpp  window.cpp  window.hpp
src/mods/: battery.cpp  cpu_usage.cpp  datetime.cpp  file.cpp  loadavg.cpp  network.cpp  padding.cpp  pipewire.cpp  ram_usage.cpp  temp.cpp  workspace.cpp
src/slider/: app.cpp  app.hpp  brightness-slider.cpp  slider_app.cpp  slider_app.hpp  slider_model.hpp  slider_window.cpp  slider_window.hpp  volume-slider.cpp  window.cpp  window.hpp
